<resources>
    <string name="main_title">Open Foris Collect Mobile</string>
    <string name="version_label">Version:</string>
    <string name="go_to_data_entry">Go to Data Entry</string>
    <string name="survey_label">Select a survey:</string>
    <string name="empty_survey_list">Empty survey list</string>
    <string name="empty_survey_list_detailed_message">Import the demo survey\nor a survey generated with\nOpen Foris Collect Survey Designer</string>
    <string name="import_new_survey_list_item">--- Import New Survey ---</string>
    <string name="import_new_survey">Import New Survey</string>
    <string name="import_demo_survey">Import Demo Survey</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="select_file">Select file</string>
    <string name="file_selected_view">View selected file</string>
    <string name="delete">Delete</string>
    <string name="rotate">Rotate</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="share_file">Share (by email, DropBox, Google Drive, etc.)</string>
    <string name="low_storage_error">Low device storage</string>
    <string name="app_name">Collect</string>
    <string name="survey_list">Surveys</string>
    <string name="settings">Settings</string>
    <string name="button_select">Edit</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait…</string>
    <string name="confirm_label">Confirm</string>
    <string name="overwrite_label">Overwrite</string>
    <string name="action_add_node">Add</string>
    <string name="action_node_list">List</string>
    <string name="action_next_attribute">Next</string>
    <string name="action_import">Import</string>
    <string name="action_survey_list">Surveys</string>
    <string name="action_export">Export</string>
    <string name="action_submit_data_to_collect">Submit data to Collect</string>
    <string name="action_backup">Backup</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Tap to generate a full backup of the application</string>
    <string name="backup_mode_choose">Choose backup mode</string>
    <string name="backup_mode_new_sdcard">Into NEW SD card</string>
    <string name="backup_mode_internal">Internal</string>
    <string name="backup_mode_save_to_downloads">Save to \"Download\" folder</string>
    <string name="backup_mode_share">Share</string>
    <string name="backup_not_enough_space_internal">Not enough space in internal memory to complete the backup process</string>
    <string name="backup_not_enough_space_working_directory">Not enough space in working directory to complete the process</string>
    <string name="backup_insert_sd_card">Please insert SD card to store backup on</string>
    <string name="backup_complete">Backed up survey to %s</string>
    <string name="backup_failed">Backup failed: %s</string>
    <string name="backup_delete_oldest_snapshot">Delete oldest snapshot of the %s and try again?</string>
    <string name="backup_delete_oldest_snapshot_failed">Failed to delete the oldest snapshot: %s</string>
    <string name="backup_file_generation_complete">Backup file generation complete</string>
    <string name="backup_file_generation_into_downloads_complete_message">Backup file generated into \"Download\" folder</string>
    <string name="backup_file_share_with_application">Send backup file to</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Tap to start a full data restore process</string>
    <string name="restore_progress_dialog_title">Restoring backup file</string>
    <string name="restore_error_invalid_backup_file">Invalid backup file selected; only valid Collect Mobile Backup files (with extension .ofcmbck) can be selected</string>
    <string name="restore_error_backup_file_generated_with_newer_version">Backup file generated with a newer version of Collect Mobile</string>
    <string name="restore_error_empty_surveys_folder">Empty surveys folder in backup file; nothing could be restored.</string>
    <string name="restore_confirm_title">Confirm data restore</string>
    <string name="restore_confirm_message">Please select a valid backup file (with .ofcmbck extension) to restore. The data restore process will DELETE ALL EXISTING DATA. Continue?</string>
    <string name="restore_confirm_message_2">ALL EXISTING DATA WILL BE DELETED and the selected backup file will be restored. Continue?</string>
    <string name="restore_successful">Data restored successfully!</string>
    <string name="restore_error">Error restoring data: %s</string>
    <string name="toast_exported_survey">Exported survey to %s</string>
    <string name="toast_exported_survey_failed">Failed to export survey: %s</string>
    <string name="survey_export_failed_title">Error during export</string>
    <string name="survey_export_failed_message">Failed to export survey "%s":\n\n\n%s</string>
    <string name="all_key_records_not_specified_title">All %1$s key attributes have not been specified</string>
    <string name="all_key_records_not_specified_message">In order to export the data, %1$s must be specified for all
        %2$s.
    </string>
    <string name="toast_import_survey">Importing survey</string>
    <string name="toast_import_survey_failed">Failed to import survey from %s</string>
    <string name="toast_not_relevant_attribute_selected">This attribute is not relevant</string>
    <string name="survey_guide">Survey Guide</string>
    <string name="survey_guide_share_with">View Survey Guide with:</string>
    <string name="survey_guide_error_opening_file">Error opening Survey Guide file: %s</string>
    <string name="survey_guide_not_found_alert_message">Survey guide not found in the survey</string>
    <string name="working_directory_not_accessible_message">Working directory not accessible</string>
    <string name="storage_not_found_retry">Retry</string>
    <string name="storage_not_found_settings">Configure location</string>
    <string name="message_invalid_date">Invalid date</string>
    <string name="message_not_a_number">Not a number</string>
    <string name="message_multiple_attribute_type_not_supported">Multiple attributes of type %s are not supported. Please modify the attribute definition in Collect Desktop / Survey Designer</string>
    <string name="label_unspecified">[Empty]</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_spatial_reference_system">Spatial Reference System</string>
    <string name="label_start_gps">Start GPS</string>
    <string name="label_stop_gps">Stop GPS</string>
    <string name="label_altitude">Altitude</string>
    <string name="label_accuracy">Accuracy</string>
    <string name="label_navigate">Navigate to\nexpected location</string>
    <string name="label_show_map">Show on Map</string>
    <string name="label_distance">Distance</string>
    <string name="label_destination">Destination</string>
    <string name="label_empty">…</string>
    <string name="label_edit">Edit</string>
    <string name="hint_code_autocomplete">- Press space to show list of values -</string>
    <string name="hint_code_qualifier_specify">- Specify -</string>
    <string name="label_show_code_descriptions">Show item descriptions</string>
    <string name="hint_date_pattern">dd MMMM yyyy</string>
    <string name="hint_time_pattern">hh:mm</string>
    <string name="submit_to_collect_confirm_title">Confirm submit data to Collect</string>
    <string name="submit_to_collect_confirm_message">Submit all collected records to Collect server?</string>
    <string name="submit_to_collect_remote_sync_not_configured">Collect server not configured in Settings</string>
    <string name="submit_to_collect_exporting_data_title">1/3 Exporting data</string>
    <string name="submit_to_collect_uploading_file_title">2/3  Uploading file to Collect server</string>
    <string name="submit_to_collect_restoring_data_title">3/3 Restoring data on Collect server</string>
    <string name="submit_to_collect_error_restoring_data">An error occurred :</string>
    <string name="submit_to_collect_submit_completed">Data submit completed</string>
    <string name="submit_to_collect_submit_cancelled">Data submit cancelled</string>
    <string name="settings_title_crewId">Crew ID</string>
    <string name="settings_title_compass">Device compass</string>
    <string name="settings_switchTextOn_compassEnabled">Enable</string>
    <string name="settings_switchTextOff_compassEnabled">Disable</string>
    <string name="settings_summaryOn_compassEnabled">Device compass is enabled</string>
    <string name="settings_summaryOff_compassEnabled">Device compass is disabled</string>
    <string name="settings_workingDir">Working directory</string>
    <string name="settings_working_directory_external_sd_card">External SD Card - %d MB free\n%s</string>
    <string name="settings_working_directory_emulated_sd_card">Emulated (internal) SD Card - %d MB free\n%s</string>
    <string name="settings_working_directory_internal_memory">Internal memory - %d MB free\n%s</string>
    <string name="settings_working_directory_custom">Custom location - %d MB free\n%s</string>
    <string name="settings_working_directory_custom_entry">Custom location ...</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark_summary">Dark theme</string>
    <string name="settings_theme_light_summary">Light theme</string>
    <string name="settings_font_scale_title">Font size</string>
    <string name="settings_font_scale_small">Small</string>
    <string name="settings_font_scale_normal">Normal</string>
    <string name="settings_title_showKeyboard">Automatically show keyboard</string>
    <string name="settings_summary_showKeyboard">Determines if soft keyboard should automatically be shown when
        accessing an node.
    </string>
    <string name="settings_language">Language</string>
    <string name="settings_survey_preferred_language_mode">Preferred language</string>
    <string name="settings_survey_preferred_language_specified">Preferred language specified</string>
    <string name="settings_language_ui">Application language (not editable)</string>
    <string name="settings_language_survey">Survey labels language (not editable)</string>
    <string name="settings_title_remoteSync">Collect Server</string>
    <string name="settings_title_remoteSyncSwitchTitle">Collect server connection</string>
    <string name="settings_title_remoteSyncSwitchSummaryOn">Collect server connection enabled</string>
    <string name="settings_title_remoteSyncSwitchSummaryOff">Collect server connection disabled</string>
    <string name="settings_title_remoteCollectAddress">Address</string>
    <string name="settings_title_remoteCollectUsername">Username</string>
    <string name="settings_title_remoteCollectPassword">Password</string>
    <string name="settings_remote_sync_test">Test connection</string>
    <string name="settings_remote_sync_test_summary">Tap to test the connection to Collect server</string>
    <string name="file_attribute_capture">Capture</string>
</resources>