<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_backup"
            android:title="@string/action_backup"
            app:showAsAction="never"
            android:onClick="backup"/>
    <item
            android:id="@+id/action_export"
            android:title="@string/action_export"
            app:showAsAction="never"
            android:onClick="exportDialog"/>
    <item
            android:id="@+id/action_send_to_collect"
            android:title="@string/action_submit_data_to_collect"
            app:showAsAction="never"
            android:onClick="navigateToSendDataToCollect"/>
    <item
            android:id="@+id/action_survey_list"
            android:title="@string/action_survey_list"
            app:showAsAction="never"
            android:onClick="navigateToSurveyList"/>
    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:orderInCategory="100000"/>
</menu>
