<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_label" />
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:id="@+id/notEmptySurveyListFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/survey_label"
                    android:textSize="20dp"/>

                <Spinner
                    android:id="@+id/surveySpinner"
                    android:layout_marginLeft="10dp"
                    android:layout_width="400dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:popupElevation="3dp" />

            </LinearLayout>

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/goToDataEntry"
                android:layout_marginTop="50dp"
                android:text="@string/go_to_data_entry"
                style="@style/button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emptySurveyListFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_survey_list"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/empty_survey_list_detailed_message"
                android:textSize="20dp" />

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/importDemoSurvey"
                android:layout_marginTop="50dp"
                android:text="@string/import_demo_survey"
                style="@style/button" />

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/importNewSurvey"
                android:layout_marginTop="50dp"
                android:text="@string/import_new_survey"
                style="@style/button" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>